# python-gapminderdata

./: README.md  Simple examples.ipynb  pyproject.toml  setup.py
gapminderdata/: __init__.py
