[project]
name = "python-gapminderdata"
version = "0.1.0"
description = "Downloader and proxy to Gapminder data."
readme = "README.md"
requires-python = "~=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Jan Pipek", email="jan.pipek@gmail.com"}
]
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "Intended Audience :: Science/Research",
]
dependencies = [
    "pandas", "requests"
]

[build-system]
requires = ["setuptools>=65.0", "build"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
# TODO: revisit
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.isort]
profile = "black"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Be a bit tolerant
# line-length = 100
extend-exclude = ["doc"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*.py" = ["E402"]


[tool.bumpver]
current_version = "v0.1.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version: {old_version} → {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"'
]
